Archive2/6b/0736462e8e14bd/output
main.cpp:4:5: error: unknown type name 'TiXmlDocument'
    TiXmlDocument document;
    ^
main.cpp:5:5: error: unknown type name 'TiXmlDeclaration'
    TiXmlDeclaration decla("1.0","","no");
    ^
main.cpp:9:5: error: unknown type name 'TiXmlComment'
    TiXmlComment comment;
    ^
main.cpp:14:5: error: unknown type name 'TiXmlElement'
    TiXmlElement root( "To Do" );
    ^
main.cpp:18:5: error: unknown type name 'TiXmlElement'
    TiXmlElement item0("item");
    ^
main.cpp:23:5: error: unknown type name 'TiXmlText'
    TiXmlText item0Start("Go To The");
    ^
main.cpp:27:5: error: unknown type name 'TiXmlElement'
    TiXmlElement item0Bold("Bold");
    ^
main.cpp:31:5: error: unknown type name 'TiXmlText'
    TiXmlText item0BoldText( "Toy Store" );
    ^
main.cpp:35:5: error: unknown type name 'TiXmlElement'
    TiXmlElement item1("item");
    ^
main.cpp:40:5: error: unknown type name 'TiXmlText'
    TiXmlText item1Start("Do Bills" );
    ^
10 errors generated.
